// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Movie list component should be empty 1`] = `
<div
  className="form-row mt-3"
>
  <ul
    className="col-12 list-group movies-list"
  >
    
  </ul>
</div>
`;

exports[`Movie list component should contain 2 movies 1`] = `
<div
  className="form-row mt-3"
>
  <ul
    className="col-12 list-group movies-list"
  >
    <li
      className="list-group-item list-group-item-action movie"
      onClick={[Function]}
    >
      <strong>
        Title
      </strong>
      <img
        alt="Title"
        className="rounded float-right"
        src="https://image.mock.api/small/image-path.jpg"
      />
      
    </li>
    <li
      className="list-group-item list-group-item-action movie"
      onClick={[Function]}
    >
      <strong>
        Other
      </strong>
      <img
        alt="Other"
        className="rounded float-right"
        src="https://image.mock.api/small/image-path.jpg"
      />
      
    </li>
  </ul>
</div>
`;

exports[`Movie list component should display "no results" 1`] = `
<div
  className="form-row mt-3"
>
  <ul
    className="col-12 list-group movies-list"
  >
    <li
      className="list-group-item"
    >
      <strong>
        There are no movies that matched your query.
      </strong>
    </li>
  </ul>
</div>
`;
